policies/other/require-pod-requests-limits/require-pod-requests-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ibm-require-pod-requests-limits
  annotations:
    policies.kyverno.io/title: Require Limits and Requests
    policies.kyverno.io/category: Maximo Application Suite - Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      As application workloads share cluster resources, it is important to limit resources
      requested and consumed by each Pod. It is recommended to require resource requests and
      limits per Pod, especially for memory and CPU. If a Namespace level request or limit is specified,
      defaults will automatically be applied to each Pod based on the LimitRange configuration.
      This policy validates that all containers have non-zero requests and limits for both memory and CPU.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: validate-resources
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaceSelector:
                matchExpressions:
                  - key: ibm.com/kyverno
                    operator: In
                    values:
                    - audit
      validate:
        message: "CPU and memory resource requests and limits are required and need to be non-zero"
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    memory: ">0"
                    cpu: ">0"
                  limits:
                    memory: ">0"
                    cpu: ">0"
            =(initContainers):
              - resources:
                  requests:
                    memory: ">0"
                    cpu: ">0"
                  limits:
                    memory: ">0"
                    cpu: ">0"
            =(ephemeralContainers):
              - resources:
                  requests:
                    memory: ">0"
                    cpu: ">0"
                  limits:
                    memory: ">0"
                    cpu: ">0"
