policies/other/require-pod-requests-limits/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: mas-dev-core
  labels:
    app: myapp
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        memory: "256Mi"
        cpu: "0.5"
      limits:
        memory: "256Mi"
        cpu: "1.0"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  namespace: mas-dev-core
  labels:
    app: myapp
spec:
  containers:
  - name: busybox
    image: busybox
    resources:
      requests:
        memory: "50Mi"
        cpu: "100m"
      limits:
        memory: "100Mi"
        cpu: "500m"
  - name: nginx
    image: nginx
    resources:
      requests:
        memory: "256Mi"
        cpu: "0.5"
      limits:
        memory: "256Mi"
        cpu: "1.0"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: mas-dev-core
  labels:
    app: myapp
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  namespace: mas-dev-core
  labels:
    app: myapp
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        memory: "256Mi"
        cpu: "0.5"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
  namespace: mas-dev-core
  labels:
    app: myapp
spec:
  containers:
  - name: busybox
    image: busybox
  - name: nginx
    image: nginx
    resources:
      requests:
        memory: "256Mi"
        cpu: "0.5"
      limits:
        memory: "256Mi"
        cpu: "1.0"
