policies/other/require-pod-requests-limits/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mas-require-pod-requests-limits
policies:
- require-pod-requests-limits.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: mas-require-requests-limits
  resources:
  - badpod01
  - badpod02
  - badpod03
  result: fail
  rule: validate-resources
- kind: Pod
  policy: mas-require-requests-limits
  resources:
  - goodpod01
  - goodpod02
  result: pass
  rule: validate-resources
